--- a/Contact3213/src/styles/main.css
+++ b/Contact3213/src/styles/main.css
@@ -1,9 +1,9 @@
 @import "./base.css";
 
 #app {
-  max-width: 1980px;
+  max-width: 100%;
+  min-width: 100%;
   margin: 0 auto;
-  /* padding: 2rem; */
   font-weight: normal;
 }
 
@@ -12,7 +12,6 @@ a,
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
-  padding: 3px;
 }
 
 @media (hover: hover) {
@@ -30,6 +29,5 @@ a,
   #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
 }
